feat: mobile shortlist

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="flex flex-wrap items-center justify-center bg-black h-[46px] w-full mt-auto">
     <div class="text-center text-white text-sm font-normal">
-        All rights reserved. ©2021-2023 Minders.
+        All rights reserved. ©2024 Discovery Partners Institute.
     </div>
 </footer>
