update: nav for mobile

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,30 +1,32 @@
-<nav class="flex flex-wrap items-center justify-between px-24 bg-[#FFFFFF] h-[4.5rem] mb-10 shadow-sm fixed top-0 w-full z-20">
-  <div>
-    <img src="<%= asset_path("icon/Logo.svg") %>" alt="DPI Logo" class="h-6">
-  </div>
-  <div>
-    <ul class="flex space-x-14 text-base text-black">
-      <li><a href="/" class="hover:text-gray-600">Home</a></li>
-      <li><a href="/dashboard/mentee" class="hover:text-gray-600">Mentors</a></li>
-      <li class="text-gray-400 inactive">Meeting</li>
-      <li class="text-gray-400 inactive">Survey</li>
-    </ul>
-  </div>
-  <div class="flex items-center space-x-4">
-    <% if user_signed_in? %>
-      <img src="<%= asset_path("icon/Notification.svg") %>" alt="Notifications" class="h-6 w-6">
-      <img 
-        src="<%= asset_path("sample_img/user_mini_image.png") %>" 
-        alt="User Image" 
-        class="h-10 w-10 rounded-full cursor-pointer"
-        id="user-image"
-        onclick="toggleModal()"
-      >
-    <% else %>
-      <%= link_to "Sign In", new_user_session_path, class: "hover:text-gray-600" %>
-    <% end %>
-  </div>
-</nav>
-<% if user_signed_in? %>
-  <%= render partial: "shared/user_modal" %>
-<% end %>
+<div class="desktop-view">
+  <nav class="flex flex-wrap items-center justify-between px-24 bg-[#FFFFFF] h-[4.5rem] mb-10 shadow-sm fixed top-0 w-full z-20">
+    <div>
+      <img src="<%= asset_path("icon/Logo.svg") %>" alt="DPI Logo" class="h-6">
+    </div>
+    <div>
+      <ul class="flex space-x-14 text-base text-black">
+        <li><a href="/" class="hover:text-gray-600">Home</a></li>
+        <li><a href="/dashboard/mentee" class="hover:text-gray-600">Mentors</a></li>
+        <li class="text-gray-400 inactive">Meeting</li>
+        <li class="text-gray-400 inactive">Survey</li>
+      </ul>
+    </div>
+    <div class="flex items-center space-x-4">
+      <% if user_signed_in? %>
+        <img src="<%= asset_path("icon/Notification.svg") %>" alt="Notifications" class="h-6 w-6">
+        <img
+          src="<%= asset_path("sample_img/user_mini_image.png") %>"
+          alt="User Image"
+          class="h-10 w-10 rounded-full cursor-pointer"
+          id="user-image"
+          onclick="toggleModal()"
+        >
+      <% else %>
+        <%= link_to "Sign In", new_user_session_path, class: "hover:text-gray-600" %>
+      <% end %>
+    </div>
+  </nav>
+  <% if user_signed_in? %>
+    <%= render partial: "shared/user_modal" %>
+  <% end %>
+</div>
