--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,8 @@
   <%= csp_meta_tag %>
   <script src="https://cdn.tailwindcss.com"></script>
   <%= render partial: "shared/cdn_assets" %>
-  <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+  <%= stylesheet_link_tag "application.tailwind", "data-turbo-track": "reload" %>
+  <%= stylesheet_link_tag "application" %>
   <%= javascript_importmap_tags %>
 </head>
 <body class="min-h-screen flex flex-col">
@@ -16,6 +17,7 @@
   <%= render 'shared/landing_nav' %>
 <% else %>
   <%= render 'shared/navbar' %>
+  <%= render 'shared/navbar_mb' %>
 <% end %>
 <div>
   <% if notice.present? %>
