update: mobile view css

--- a/app/views/profile/_profile.html.erb
+++ b/app/views/profile/_profile.html.erb
@@ -24,7 +24,7 @@
           <p class="text-xs text-[#202020]">Discovery Partners Institute</p>
         </div>
         <!-- TODO <p><%#= user.company %></p> -->
-        <div class="grid grid-cols-1 gap-2 sm:grid-cols-2 sm:gap-4">
+        <div class="grid grid-cols-1 gap-2 md:grid-cols-2 md:gap-4">
           <div class="flex gap-1">
             <img src="<%= asset_path('icon/LinkedIn.svg') %>" alt="LinkedIn" class="max-w-15 max-h-15 mr-1">
             <p class="text-xs text-[#202020] text-pretty truncate hover:font-normal">
