--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -1,8 +1,9 @@
-<div class="grid grid-cols-1 sm:grid-cols-4 gap-5 mt-20 py-9 px-24 max-w-[100%]">
-  <div class="flex flex-col space-y-5 col-span-1">
-    <%= render partial: 'dashboard/user_card' %>
-    <%= render partial: 'dashboard/program_card' %>
+<div class="grid grid-col-1 sm:grid-cols-4 gap-5 mt-[5rem] px-4 sm:py-9 sm:px-24 max-w-[100%]">
+  <div class="desktop-view">
+    <div class="flex flex-col space-y-5 col-span-1">
+      <%= render partial: 'dashboard/user_card' %>
+      <%= render partial: 'dashboard/program_card' %>
+    </div>
   </div>
-
   <%= render 'profile', user: @user %>
 </div>
