corrected mailer usage of cohort names from cohort model

--- a/app/views/cohort_member_mailer/mentee_welcome_mail.html.erb
+++ b/app/views/cohort_member_mailer/mentee_welcome_mail.html.erb
@@ -1,6 +1,6 @@
 <h1>Hey <%= @user.first_name %>, welcome to MentE!</h1>
 
-<p>You're registered as a mentee for Discovery Partners Institute's <%= @cohort.program.name %>, cohort <%= @cohort.name %>!</p>
+<p>You're registered as a mentee for Discovery Partners Institute's <%= @cohort.program.name %>, cohort <%= @cohort.cohort_name %>!</p>
 
 <p>Please follow this link to register your account: insert link.</p>
 
