updated all emails to use only the args we have

--- a/app/views/cohort_member_mailer/mentee_welcome_mail.text.erb
+++ b/app/views/cohort_member_mailer/mentee_welcome_mail.text.erb
@@ -1,7 +1,7 @@
-Hey <%= @user.first_name %>, welcome to MentE!
+Welcome to MentE!
 ========================================================
 
-You're registered as a mentee for Discovery Partners Institute's <%= @cohort.program.name %>, cohort <%= @cohort.cohort_name %>!
+You're registered as a mentee for Discovery Partners Institute's <%= @cohort.program.name %> <%= @cohort.cohort_name %>!
 
 Please follow this link to register your account: insert link.
 
