--- a/app/views/cohort_member_mailer/mentor_welcome_mail.html.erb
+++ b/app/views/cohort_member_mailer/mentor_welcome_mail.html.erb
@@ -1,6 +1,6 @@
-<h1>Hey <%= @user.first_name %>, welcome to MentE!</h1>
+<h1>Welcome to MentE!</h1>
 
-<p>Thank you for volunteering as a mentor for Discovery Partners Institute's <%= @cohort.program.name %>, cohort <%= @cohort.cohort_name %>!</p>
+<p>Thank you for volunteering as a mentor for Discovery Partners Institute's <%= @cohort.program.name %> <%= @cohort.cohort_name %>!</p>
 
 <p>Please follow this link to register your account: insert link.</p>
 
