--- a/app/views/cohort_member_mailer/mentor_welcome_mail.text.erb
+++ b/app/views/cohort_member_mailer/mentor_welcome_mail.text.erb
@@ -1,7 +1,7 @@
-Hey <%= @user.first_name %>, welcome to MentE!
+Welcome to MentE!
 ========================================================
 
-Thank you for volunteering as a mentor for Discovery Partners Institute's <%= @cohort.program.name %>, cohort <%= @cohort.cohort_name %>!
+Thank you for volunteering as a mentor for Discovery Partners Institute's <%= @cohort.program.name %> <%= @cohort.cohort_name %>!
 
 Please follow this link to register your account: insert link.
 
