updated formatting of email signature

--- a/app/views/cohort_member_mailer/mentee_welcome_mail.html.erb
+++ b/app/views/cohort_member_mailer/mentee_welcome_mail.html.erb
@@ -4,6 +4,5 @@
 
 <p>Please follow this link to register your account: insert link.</p>
 
-<p>Yours Truly,
-    The MentE Team
-</p>
+<p>Yours Truly,</p>
+<p>The MentE Team</p>
