--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -106,6 +106,27 @@ body {
     border-color: black !important;
 }
 
+
+@media (max-width: 768px) {
+    /* Mobile styles */
+    .mobile-view {
+        display: block;
+    }
+    .desktop-view {
+        display: none;
+    }
+}
+
+@media (min-width: 769px) {
+    /* Desktop styles  */
+    .mobile-view {
+        display: none;
+    }
+    .desktop-view {
+        display: block;
+    }
+}
+
 @media (max-width: 768px) {
     /* Mobile styles */
     .mobile-view {
