--- a/app/views/dashboard/_mentee_shortlist_mobile.html.erb
+++ b/app/views/dashboard/_mentee_shortlist_mobile.html.erb
@@ -1,32 +1,29 @@
-<div class="grid place-content-center grid-col-1 gap-4 px-4 max-w-[100%]">
-  <!-- Right Section: Main Content -->
-  <div class="grid grid-col-1 gap-3 place-content-center">
-    <h1 class="text-xl font-semibold text-[#202020] text-center">
-      Available Mentors
-    </h1>
-
-    <!-- Grid of mentors -->
-    <div id="mentor-list-section-m" class="grid grid-cols-1 gap-3 min-h-[10rem] max-h-[18rem] overflow-y-scroll scrollbar-thin scrollbar-thumb-gray-400 scrollbar-track-gray-300 rounded-[0.55rem] ">
-      <% available_mentors_count = 0 %>
-      <% mentors_data.each do |mentor| %>
-        <% current_mentee_count = mentor.mentee_capacity_count(mentor.cohort.id) %>
-        <% capacity_cap = mentor.capacity %>
-        <% if current_user.cohort.running? && current_mentee_count < capacity_cap %>
-          <%= render 'profile_card_sm', mentor: mentor %>
-          <% available_mentors_count += 1 %>
-        <% end %>
+<!-- Right Section: Main Content -->
+<div class="flex flex-col gap-3 align-middle px-[1rem]">
+  <h1 class="text-xl font-semibold text-[#202020] text-center">
+    Available Mentors
+  </h1>
+  <!-- Grid of mentors -->
+  <div id="mentor-list-section-m" class="grid grid-cols-1 gap-3 mb-[15rem] border-none overflow-y-scroll rounded-[0.55rem] pb-[5rem]">
+    <% available_mentors_count = 0 %>
+    <% mentors_data.each do |mentor| %>
+      <% current_mentee_count = mentor.mentee_capacity_count(mentor.cohort.id) %>
+      <% capacity_cap = mentor.capacity %>
+      <% if current_user.cohort.running? && current_mentee_count < capacity_cap %>
+        <%= render 'profile_card_sm', mentor: mentor %>
+        <% available_mentors_count += 1 %>
       <% end %>
-
-      <!-- If no available mentors -->
-      <% if !current_user.cohort.running? %>
-        <h2> Mentor matching is closed for cohort <%= current_user.cohort.id %> </h2>
-      <% elsif available_mentors_count == 0 %>
-        <h2> No more available mentors in cohort <%= current_user.cohort.id %> </h2>
-      <% end %>
-    </div>
+    <% end %>
+    <!-- If no available mentors -->
+    <% if !current_user.cohort.running? %>
+      <h2> Mentor matching is closed for cohort <%= current_user.cohort.id %> </h2>
+    <% elsif available_mentors_count == 0 %>
+      <h2> No more available mentors in cohort <%= current_user.cohort.id %> </h2>
+    <% end %>
   </div>
   <div class="w-[22rem] border-t border-[#DCDCDC]"></div>
-  <div>
+  <!-- Shortlist section, fixed at the bottom of the viewport -->
+  <div class="fixed px-[1rem] bottom-[5rem] w-[100%] md:bottom-[5%] left-1/2 transform -translate-x-1/2">
     <%= render partial: 'shortlist_card_mobile' %>
   </div>
 </div>
