--- a/app/views/cohorts/_form.html.erb
+++ b/app/views/cohorts/_form.html.erb
@@ -29,31 +29,31 @@
   </div>
 
   <div class="flex flex-col">
-    <%= form.label :start_date, class: "font-medium mb-1" %>
+    <%= form.label :start_date, "Cohort Start Time", class: "font-medium mb-1" %>
     <%= form.datetime_field :start_date,
                             class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
   </div>
 
   <div class="flex flex-col">
-    <%= form.label :end_date, class: "font-medium mb-1" %>
+    <%= form.label :end_date, "Cohort End Time", class: "font-medium mb-1" %>
     <%= form.datetime_field :end_date,
                             class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
   </div>
 
   <div class="flex flex-col">
-    <%= form.label :shortlist_start_time, class: "font-medium mb-1" %>
+    <%= form.label :shortlist_start_time, "Shotlist Start Time", class: "font-medium mb-1" %>
     <%= form.datetime_field :shortlist_start_time,
                             class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
   </div>
 
   <div class="flex flex-col">
-    <%= form.label :shortlist_end_time, class: "font-medium mb-1" %>
+    <%= form.label :shortlist_end_time, "Shotlist End Time", class: "font-medium mb-1" %>
     <%= form.datetime_field :shortlist_end_time,
                             class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
   </div>
 
   <div class="flex flex-col">
-    <%= form.label :required_meetings, class: "font-medium mb-1" %>
+    <%= form.label :required_meetings, "Required Meetings", class: "font-medium mb-1" %>
     <%= form.number_field :required_meetings,
                             class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
   </div>
