--- a/app/views/shared/_landing_nav_mb.html.erb
+++ b/app/views/shared/_landing_nav_mb.html.erb
@@ -1,8 +1,60 @@
-<div class="p-5" id="landing_nav_mb">
-  <div class="bg-white opacity-70 flex items-center	justify-between border-slate-300 rounded-xl p-3 h-[3.25rem]">
-    <a href="/">
-      <img src="<%= asset_path("icon/Logo.svg") %>" alt="DPI Logo" class="h-[1.5rem]">
-    </a>
-    <img src="<%= asset_path("icon/menu.svg") %>" alt="menu" class="h-[1.5rem]">
+<div id="landing_nav_mb" class="p-5">
+  <div class="bg-white flex flex-col border-slate-300 rounded-xl px-5 py-5 z-40 " style="background: rgba(255, 255, 255, 0.30);">
+    <div class="flex items-center justify-between">
+      <a href="/">
+        <img src="<%= asset_path("icon/Logo.svg") %>" alt="DPI Logo" class="h-[2rem]">
+      </a>
+      <img src="<%= asset_path("icon/menu.svg") %>" alt="menu" class="h-[2rem]" id="menu-toggle">
+    </div>
+    <div id="menu" class="transition-all flex flex-col items-center">
+      <ul class="text-[1.5rem] font-normal text-center my-[8rem] flex flex-col gap-[3rem]">
+        <li><a href="/" class="hover:font-semibold">Home</a></li>
+        <li><a href="/" class="hover:font-semibold">Demo</a></li>
+        <% if user_signed_in? %>
+          <%= link_to "Dashboard", dashboard_path(role: current_user.role), class: "hover:text-gray-600" %>
+        <% else %>
+          <%= link_to "Dashboard", new_user_session_path %>
+        <% end %>
+      </ul>
+      <div class="flex flex-col gap-4 mb-[2.7rem]">
+        <div class="text-[1.2rem] text-center font-semibold bg-[#FFF] text-[#202020] border shadow-xs rounded-md w-[20rem] py-3 px-5 mr-auto hover:scale-105">
+          <% if user_signed_in? %>
+            <%= link_to "Edit", edit_user_registration_path %>
+          <% else %>
+            <%= link_to "Sign Up", mentor_mentee_registration_path(signup_type: "mentee") %>
+          <% end %>
+        </div>
+        <div class="text-[1.2rem] text-center font-semibold bg-[#202020] text-[#FFFFFF] border border-transparent rounded-md w-[20rem] py-3 px-5 mr-auto hover:scale-105">
+          <% if user_signed_in? %>
+            <%= button_to "Sign Out", destroy_user_session_path, method: :delete, data: { turbo: false } %>
+          <% else %>
+            <%= link_to "Sign Up", mentor_mentee_registration_path(signup_type: "mentee") %>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const menuToggle = document.getElementById('menu-toggle');
+        const menu = document.getElementById('menu');
+
+        const openIconSrc = "<%= asset_path('icon/menu.svg') %>";
+        const closeIconSrc = "<%= asset_path('icon/close_bl.svg') %>";
+
+        menuToggle.addEventListener('click', function () {
+            console.log("clicked");
+
+            menu.classList.toggle('hidden');
+            menu.style.maxHeight = menu.classList.contains('hidden') ? '0' : `${menu.scrollHeight}px`;
+
+            if (menu.classList.contains('hidden')) {
+                menuToggle.src = openIconSrc;
+            } else {
+                menuToggle.src = closeIconSrc;
+            }
+        });
+    });
+</script>
