--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,16 +16,17 @@
   <%= render 'shared/landing_nav' %>
 <% else %>
   <%= render 'shared/navbar' %>
+  <%= render 'shared/navbar_mb' %>
 <% end %>
-<div>
-  <% if notice.present? %>
-    <%= render partial: "shared/flash_notice", locals: { message: notice } %>
-  <% end %>
-  <% if alert.present? %>
-    <%= render partial: "shared/flash_alert", locals: { message: alert } %>
-  <% end %>
-</div>
-<%= yield %>
+  <div>
+    <% if notice.present? %>
+      <%= render partial: "shared/flash_notice", locals: { message: notice, css_class: "success" } %>
+    <% end %>
+    <% if alert.present? %>
+      <%= render partial: "shared/flash_alert", locals: { message: alert, css_class: "danger" } %>
+    <% end %>
+  </div>
+  <%= yield %>
 <%= render partial: "shared/footer" %>
 </body>
 </html>
