--- a/app/views/cohort_members/_cohort_member.html.erb
+++ b/app/views/cohort_members/_cohort_member.html.erb
@@ -1,17 +1,14 @@
-<div id="<%= dom_id cohort_member %>">
-  <p>
-    <strong>Email:</strong>
-    <%= cohort_member.email %>
-  </p>
-
-  <p>
-    <strong>Role:</strong>
-    <%= cohort_member.role %>
-  </p>
-
-  <p>
-    <strong>Cohort:</strong>
-    <%= cohort_member.cohort %>
-  </p>
-
+<div id="<%= dom_id(cohort_member) %>" class="bg-gray-50 p-4 rounded-lg shadow-sm border border-gray-100">
+  <div class="flex items-center justify-between">
+    <p class="text-gray-600 font-semibold">
+      <span class="text-gray-700">Email:</span> <%= cohort_member.user.email %>
+    </p>
+    <span class="text-sm font-semibold <%= cohort_member.role == "mentor" ? "text-blue-600 bg-blue-100" : "text-green-600 bg-green-100" %> px-3 py-1 rounded-lg">
+      <%= cohort_member.role.capitalize %>
+    </span>
+  </div>
+  <div class="flex flex-col mt-2">
+    <p class="text-gray-500 text-sm font-semibold">Cohort:</p>
+    <p class="text-gray-700 font-medium"><%= cohort_member.cohort.cohort_name %></p>
+  </div>
 </div>
