--- a/app/views/cohort_member_mailer/mentor_welcome_mail.text.erb
+++ b/app/views/cohort_member_mailer/mentor_welcome_mail.text.erb
@@ -3,7 +3,7 @@ Welcome to MentE!
 
 Thank you for volunteering as a mentor for Discovery Partners Institute's <%= @cohort.program.name %> <%= @cohort.cohort_name %>!
 
-Please follow this link to register your account: insert link.
+Please follow this link to register your account: <%= link_to 'Complete Your Profile', mentor_mentee_registration_url(signup_token: @user.signup_token) %>
 
 Yours Truly,
     The MentE Team
